2014-09-13  Christoph Redl <redl@kr.tuwien.ac.at>
	* build_potassco.sh: Upgrade to clasp 3.1.0 and gringo 4.4.0.
	* checkout_build_potassco.sh: Likewise.
	* bootstrap-extra.sh: Likewise.
	* bootstrap-windows.sh: Upgrade to clasp 3.1.0.

2014-09-10  Christoph Redl <redl@kr.tuwien.ac.at>
	* src/PythonPlugin.cpp: Prepare Python-interface for plugins.
	* include/dlvhex2/PythonPlugin.h: Likewise.

2014-07-27  Christoph Redl <redl@kr.tuwien.ac.at>

	* src/GenuineGuessAndCheckModelGenerator.cpp: Use incremental
	solving for dealing with value invention (works only for simple
	cases so far).
	* include/dlvhex2/GenuineGuessAndCheckModelGenerator.h:
	Likewise.

2014-07-26  Christoph Redl <redl@kr.tuwien.ac.at>

	* src/GringoGrounder.cpp: Support incremental programs
	* include/dlvhex2/GringoGrounder.h: Likewise.
	* src/ClaspSolver.h: Likewise.
	* include/dlvhex2/ClaspSolver.h: Likewise.

2014-04-07  Christoph Redl <redl@kr.tuwien.ac.at>

	* bootstrap-extra.sh: Upgrade to Clasp 3.0.3.
	* build-potassco.sh: Likewise.
	* checkout-build-potassco.sh: Likewise.

2014-03-14  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/ClaspSolver.h: Upgrade to Clasp 3.0.1.
	* src/ClaspSolver.cpp: Likewise.

2014-03-13  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/GringoGrounder.h: Upgrade to Gringo 4.3.0.
	* src/GringoGrounder.cpp: Likewise.

2014-02-15  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/ClaspSolver.h: Upgrade to Clasp 3.0.
	* src/ClaspSolver.cpp: Likewise.
	* include/dlvhex2/GenuineGuessAndCheckModelGenerator.h:
	Simplify implementation.
	* src/GenuineGuessAndCheckModelGenerator.cpp: Likewise.

2014-01-07  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/PluginInterface.h: Allow plugins to provide
	custom model generators.
	* include/dlvhex2/ProgramCtx.h: Likewise.
	* src/PluginInterface.cpp: Likewise.
	* src/ProgramCtx.cpp: Likewise.

2013-12-21  Christoph Redl <redl@kr.tuwien.ac.at>
